# Full_Stack_Event_Management

./: learnings.txt
Backend/: README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt  settings.py
Backend/core/: auth.py
Backend/middlewares/: protected_dependency.py
Backend/modules/events/: controller.py  dependency.py  models.py  schema.py  service.py  validator.py
Backend/modules/transactions/: controller.py  model.py
Backend/modules/users/: controller.py  dependency.py  models.py  schema.py  service.py  validator.py
Backend/shared/: generic_dao.py  generic_enum.py  generic_error_handling.py  generic_validation.py  response_schema.py
Backend/utils/: binaryConversion.py  cloudinary_util.py  qr_code.py  string_utils.py
frontend/: package-lock.json  package.json
frontend/src/shared/components/: Navbar.jsx
frontend/src/shared/hooks/Context/: AuthContext.jsx
